OmneFictio.Web/wwwroot/css/index.scss
@import 'theme';

main{
    display: flex;
    flex-direction: row;
    color: $textcolor;
}

.posts-cont{
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    .post-options{
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        padding: 10px;
        //color: $textcolor;
        .po-option{
            font-size: 1.6rem;
            text-shadow: 0px 0px 6px $textcolor_boxshadow;
            font-family: 'Josefin Sans', sans-serif;
            cursor: pointer;
            &:hover{
                text-decoration: underline;
            }
        }
        .po-orderby{
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            align-items: baseline;
            .orderby-btn{
                margin-right: 16px;
            }
            .orderby-value{
                font-size: 1.2rem;
                &:hover{
                    text-decoration: unset;
                }
            }
        }
        .po-type{
            margin-left: auto;
            margin-right: 36px;
        }
    }
}
.post{
    margin-bottom: 12px;
    background-color: $frontbgcolor;
    overflow: hidden;
    max-height: 260px;
}
.post-detail{
    display: flex;
    flex-direction: column;
    &:last-child{
        margin-bottom: unset;
    }
    .p-header{
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: flex-start;
        .p-title{
            padding: 10px;
            font-family: 'Josefin Sans', sans-serif;
            font-weight: 600;
            span{
                vertical-align:middle;
            }
            span:hover{
                text-decoration: underline;
            }
            .p-date{
                margin-left: 6px;
                color: $textcolor2;
                font-size: 0.7rem;
                font-family: 'Gudea';
            }
        }
        .p-menu{
            display: flex;
            height: 100%;
            padding: 0 10px;
            font-size: 2rem;
            i{
                cursor: pointer;
            }
        }
    }
    .p-body{
        padding: 0 14px;
        font-size: 0.9rem;
        font-family: 'Gudea', sans-serif;
        margin-bottom: 10px;
    }
    .p-footer{
        //color: $textcolor;
        font-family: 'Itim', cursive;
        padding: 0 10px 10px;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        flex-flow: wrap;
        i{
            font-size: 1.2rem;
            cursor: pointer;
            transition: color 0.2s ease;
            &:hover{
                color: $textcolor_hover1;
            }
        }
        .p-likes{
            padding: 0 8px;
        }
        .p-rate{
            padding: 0 20px;
            flex-grow: 1;
        }
        .p-username{
            font-size: 0.8rem;
            cursor: pointer;
            padding-right: 8px;
            &:hover{
                text-decoration: underline;
            }
        }
        img{
            height: 1.7rem;
            width: 1.7rem;
            border-radius: 50%;
            cursor: pointer;
        }
    }
}
.post-menu{
    display: none; //flex
    flex-direction: row;
    .pd-details{
        flex-grow: 1;
        display: flex;
        flex-direction: column;
        padding: 10px;
        .pd-heading{
            font-size: 1.1rem;
            font-family: 'Josefin Sans', sans-serif;
            font-weight: 600;
        }
        .pd-value{
            font-size: 0.9rem;
            font-family: 'Gudea', sans-serif;
        }
        .pd-tags{
            font-size: 0.9rem;
            font-family: 'Gudea', sans-serif;
            margin-bottom: 8px;
            padding: 0 4px;
            span{
                margin-right: 6px;
            }
        }
        .pd-type{
            margin-bottom: 8px;
        }
    }
    .pd-right{
        display: flex;
        flex-direction: column;
        flex-shrink: 0;
        .pd-close{
            display: flex;
            justify-content: end;
            padding: 4px 10px;
            font-size: 2rem;
            i{
                cursor: pointer;
            }
        }
        .pd-actions{
            display: flex;
            flex-direction: column;
            justify-content: center;
            padding: 4px 10px;
            .pd-saved{
                background-color: #4A8D5D !important;
            }
            button{
                color: $textcolor;
                border-radius: 20px;
                background-color: $frontbgcolor_hover2;
                outline: none;
                border: none;
                margin-bottom: 8px;
                padding: 2px 10px;
                transition: 0.2s ease;
                &:hover{
                    background-color: $frontbgcolor_hover3;
                }
            }
        }
    }
}







.nav-cont{
    display: none;
    flex-direction: column;
    width: 200px;
    margin:20px 20px 0 0;
    flex-shrink: 0;
    .navcont-temp{
        display: flex;
        background-color: $sitebgcolor !important;
        border-radius: 10px;
        padding: 8px;
        width: 100%;
        height: 140px;
        margin-bottom: 12px;
    }
    .nav-ad1{
        background-color: rgb(139, 136, 199);
        border-radius: 10px;
        width: 100%;
        height: 200px;
        margin-bottom: 12px;
    }
    .sticky-nav{
        display: flex;
        background-color: $sitebgcolor !important;
        border-radius: 10px;
        padding: 8px;
        width: 100%;
        height: 420px;
    }
}





// Small devices (landscape phones, 576px and up)
@media (min-width: 576px) {
}

// Medium devices (tablets, 768px and up)
@media (min-width: 768px) {
    .nav-cont{
        display: flex;
    }
    .post{
        background-color: $sitebgcolor !important;
        border-radius: 10px;
    }
    .post-options{
        padding: 20px 10px 10px !important;
    }
}

// Large devices (desktops, 992px and up)
@media (min-width: 992px) {
    .nav-cont{
        width: 300px;
    }
}

// Extra large devices (large desktops, 1200px and up)
@media (min-width: 1200px) {
}

// Max widths
@media (max-width: 767.98px) {
    .main-cont{
        padding: 0;
        margin: 0;
        max-width: unset;
        width: 100%;
    }
}

// Custom
@media (max-width: 340px) {
    .orderby-value{
        display: none;
    }
    .po-option{
        font-size: 1.3rem !important;
    }
}

